----------------------------------
[2008-12-04 Ver 0.30 -> 0.31]
- Replaced indent(from tab to space).
----------------------------------
[2008-11-14 Ver 0.29 -> 0.30]
- Deleted 'tidy_repair_string' in filterMobilePager.
- Modified page template name and view logic.
----------------------------------
[2008-11-13 Ver 0.28 -> 0.29]
- Exchange prefix logic.
- Added css mobile filter.
- Added files for blank directories.
- Deleted unnecessary comment out.
- Included HTML_CSS_Mobile.
- Included Text_Pictogram_Mobile.
- Added smarty plugin for mobile input mode 'wizin_inputmode'.
- Added shell : set PHING_COMMAND environment variable, and call propel-gen.
- Replaced indent(from space to tab).
- Added 'HTML_CSS_Mobile' filter and 'Text_Pictogram_Mobile' filter.
- Modified client data yaml.
- Modified framework core files.
- Included 'PHPTAL' template engine.
- Modified Renderer class.(Added logic for PHPTAL)
- Modified filter for mobile.
- Added logic about define 'WIZIN_COMPILE_DIR'.
- Replace 'require_once' to 'require'.
- Modified framework core logic.
----------------------------------
[2008-10-17 Ver 0.27 -> 0.28]
- Fixed bug about include 'spyc' twice.
- Define 'WIZIN_CACHE_DIR' and 'WIZIN_PEAR_DIR', modified code about these constants.
- Modified some filter which rewrites the form tag.
- Added googlebot plugin.
- Fixed bugs about some wrong logic.
- Fixed bug about 'tidy_repair_string' args.
- Added xml header replace logic.
- Modified blank textarea logic.
- Modifiled yaml cache file name.
----------------------------------
[2008-08-26 Ver 0.26 -> 0.27]
- Added image resize logic for PNG-24.
- Fixed bug about resized image becomes larger than original image.
----------------------------------
[2008-08-20 Ver 0.25 -> 0.26]
- Modified function name in filter plugins.
- Added set 'request_uri' logic for IIS.(thx miniHORI)
----------------------------------
[2008-08-20 Ver 0.24 -> 0.25]