@@ -1,6 +1,7 @@
 ----------------------------------
 [2008-12-04 Ver 0.30 -> 0.31]
 - Replaced indent(from tab to space).
+- Modified mobile pager. If part of pages is empty, skip this.
 ----------------------------------
 [2008-11-14 Ver 0.29 -> 0.30]
 - Deleted 'tidy_repair_string' in filterMobilePager.
